objects/Customer_Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Admin Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Grouping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Grouping</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Report</fullName>
                </value>
                <value>
                    <fullName>Application PDF</fullName>
                </value>
                <value>
                    <fullName>Articles of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Articles of Organization</fullName>
                </value>
                <value>
                    <fullName>ATM Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Business Check</fullName>
                </value>
                <value>
                    <fullName>Cashflow Statement</fullName>
                </value>
                <value>
                    <fullName>City License</fullName>
                </value>
                <value>
                    <fullName>Company Profile</fullName>
                </value>
                <value>
                    <fullName>Corporate Officers</fullName>
                </value>
                <value>
                    <fullName>Corporate Resolution</fullName>
                </value>
                <value>
                    <fullName>County License</fullName>
                </value>
                <value>
                    <fullName>Cultivation Tax Receipts</fullName>
                </value>
                <value>
                    <fullName>DBA Certificate</fullName>
                </value>
                <value>
                    <fullName>EIN Verification</fullName>
                </value>
                <value>
                    <fullName>Excise Tax Receipts</fullName>
                </value>
                <value>
                    <fullName>Federal Tax Return</fullName>
                </value>
                <value>
                    <fullName>Financial Forecast</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Insurance Policy</fullName>
                </value>
                <value>
                    <fullName>Joint Venture Agreement</fullName>
                </value>
                <value>
                    <fullName>Key Personnel</fullName>
                </value>
                <value>
                    <fullName>Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Local Tax Receipts</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>On-site Checklist</fullName>
                </value>
                <value>
                    <fullName>On-site Inspector Report</fullName>
                </value>
                <value>
                    <fullName>Ownership Structure</fullName>
                </value>
                <value>
                    <fullName>P&amp;L Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Unavailable_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Unavailable Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_expiration_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document expiration date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>externalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>externalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>